# vector-db-benchmark

./: .gitignore  .prettierignore  .tool-versions  README.md  cdk.context.json  cdk.json  jest.config.js  package-lock.json  package.json  pyproject.toml  template.yaml  tsconfig.json
.hypothesis/constants/: 1f8ff188cef507ee  ede0f6de03f981ce
.kiro/settings/: mcp.json  mcp.json.sample
.kiro/steering/: 1-product-overview.md  2-technology-stack.md  3-implementation-guide.md
docs/: architecture-vector-benchmark-simple.drawio  architecture-vector-benchmark.drawio
ecs/bulk-ingest/: Dockerfile  index_manager.py  ingestion.py  main.py  metrics.py  requirements.txt  vector_generator.py
functions/memorydb-semantic-cache/: __init__.py  config.py  embedding.py  handler.py  index_manager.py  memorydb_store.py  metrics.py  models.py  requirements.txt  semantic_cache.py
functions/search-test/: cache_store.py  embedding.py  handler.py  logic.py  metrics.py  models.py  requirements.txt  semantic_cache.py  vector_generator.py
functions/vector-verify/: handler.py  logic.py  models.py  requirements.txt
lib/: aws-lab-stack.ts  aws-private-lab-stack.ts  vector-db-benchmark-stack.ts
lib/constructs/: aurora.ts  bulk-ingest.ts  network.ts  opensearch.ts  s3vectors.ts  search-test.ts  verify-function.ts
results/20260322-065136/: aurora-result.json  opensearch-result.json
scripts/: benchmark.sh  create_cache_table.sql  search-benchmark.sh
test/: aws-lab-stack.test.ts  aws-private-lab-stack.test.ts  setup-sam-mock.ts  teardown-sam-mock.ts  vector-db-benchmark-stack.test.ts
(+72 files in other folders)
