[project]
name = "vector-db-benchmark"
version = "0.1.0"
description = "AWS技術検証用リポジトリ"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "moto[all]>=5.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "boto3-stubs[essential]>=1.38",
    "hypothesis>=6.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "functions/vector-verify"]
